--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@
   color: #61dafb;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
